<resources>

    <string name="app_name">TaskManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_add_task">AddTask</string>
    
   
    <string-array name="repeatType1">
        <item>zilnic</item>
        <item>saptamanal</item>
        <item>lunar</item>
        <item>anual</item>
    </string-array>    
    
    <string name="titleMessage">Titlu</string>
    <string name="fillMessage">Eveniment fix</string>
    <string name="allDayMessage">Toată ziua</string>
    <string name="repeatMessage">Repetati</string>
    <string name="repeatType1Message">Se repetă</string>
    <string name="repeatType2Message">la fiecare</string>
    <string name="repeatType2AfterMessage"></string>
    <string name="descriptionMessage">Descriere</string>
    <string name="locationMessage">Unde</string>
    <string name="priorityMessage">Prioritate</string>
    <string name="considerPriorityMessage">Tine cont de prioritate pentru planificare</string>
    <string name="considerTimeMessage">Tine cont de dată/oră pentru planificare</string>
    <string name="okMessage">OK</string>
    <string name="cancelMessage">Cancel</string>
    
    <string-array name="priorityValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    
    <string-array name="repeatType2Values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    
    <string-array name="repeatType1Values">
        <item>zilnic</item>
        <item>săptămânal</item>
        <item>lunar</item>
        <item>anual</item>
    </string-array>
    

</resources>